Fix login button and login dropdown alignment

--- a/app/assets/stylesheets/bootstrap/_navbar.scss
+++ b/app/assets/stylesheets/bootstrap/_navbar.scss
@@ -373,7 +373,7 @@ li.divider-vertical.pull-right {
 
   &.login {
     border: none;
-    left: -215px;
+    left: -219px;
     top: 49px;
     padding: 10px;
     border-top-right-radius: 0px;
